Add unused argument analysis, improve interface